[package]
name = "rust-llm-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dotenv = "0.15.0"
env_logger = "0.11.5"
genai = "0.1.9"
llama_cpp = { version = "0.3.2", features = ["metal"] }
log = "0.4.22"
reqwest = "0.12.8"
rusqlite = "0.32.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version="1.40.0", features=["full"] }
